--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,5 @@
 PORT=3000
-MONGO_URI=mongodb://localhost:27017/daybook
-JWT_SECRET=nillu@5678
+MONGO_URI=mongodb+srv://root:rock%40123@dairy.utd1d3a.mongodb.net/?retryWrites=true&w=majority&appName=dairy
+
+JWT_SECRET=rushB@5678
 FRONTEND_URL=http://localhost:5173
